# cameralot

./: .gitignore  Cargo.toml  build.rs
cameralot/: CMakeLists.txt
cameralot/cameralot-capture/: CMakeLists.txt
cameralot/cameralot-capture/include/: capture.h
cameralot/cameralot-capture/src/: c_capture.cpp  capture.cpp
cameralot/cameralot-tests/: CMakeLists.txt
cameralot/cameralot-tests/src/: test-capture-noexcept.cpp
cameralot/include/: capture.h
cameralot/src/: c_capture.cpp  capture.cpp
src/: cameralot_capture.rs  cameralot_capture_raw.rs  main.rs
